tests/paczka1/small_fuzzy/71304981.err
Error in line 10: siAX5rnGq6 A666 29,5
Error in line 15: siAX5rnGq6 A15 25,3
